@@ -1,3 +1,9 @@
+2008-01-17  John Robeson <johnny@localmomentum.net>
+
+    Make mandatory attribute in metadata xml files work
+    Patch from https://bugzilla.redhat.com/show_bug.cgi?id=253996  
+    by Josko Plazonic
+
 2008-01-17  Federico Mena Quintero  <federico@novell.com>
 
 	* configure.ac: Bump version number to 2.21.0.
